replace trafficId with tenantId which is more appropriate term